<resources>
    <string name="app_name">English Fun‏</string>
    <string name="full_name">full name</string>
    <string name="change_email">change email</string>
    <string name="change_password">Change Password</string>
    <string name="login">Login</string>
    <string name="login_to_continue">login to continue</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="sign_up_to_book">sign up to book and get information</string>
    <string name="sign_up">Register a user</string>
    <string name="forget_pass">Forget Password</string>
    <string name="resend_ver_email">Resend Verification Email</string>
    <string name="please_file_all">please fill all the fields to get registered</string>
    <string name="register">Register</string>
    <string name="slow_or_no_internet">slow or no internet connection</string>
    <string name="close">close</string>
    <string name="try_again">try again</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="reset_password">Reset your Password</string>
    <string name="request_an_email">Request an email reset link</string>
    <string name="send_link">send link</string>
    <string name="new_course">Adding a new course</string>
    <string name="enter_title_course">please enter title course</string>
    <string name="enter_des_course">please enter description course</string>
    <string name="select_image">choose images</string>
    <string name="add_new_video">Add New Video</string>
    <string name="enter_title">enter title</string>
    <string name="enter_description">enter some text</string>
    <string name="account">account</string>
    <string name="cancel">Cancel</string>
    <string name="download_this_video">Do you want to download this video?</string>
    <string name="play_next_video">Do you want to watch next video?</string>
    <string name="do_you_want_to_delete">Do you want to delete this?</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="deleted">Successful deleted</string>
    <string name="upload_is">upload is</string>
    <string name="done">done</string>
    <string name="data_type_admin_broadcast">data_type_admin_broadcast</string>
    <string name="password_incorrect">your password incorrect. please try again</string>
    <string name="email_password_incorrect">your email or password was incorrect. please try again</string>
    <string name="enter_your_email">enter your email address</string>
    <string name="email_incorrect">your email incorrect. please try again</string>
    <string name="enter_your_pass">enter your password</string>
    <string name="invalid_credentials">Invalid Credentials, Reset your password and try again</string>
    <string name="sent_password_reset">Password Reset Link Sent to Email</string>
    <string name="no_user_is_associated">No User is Associated with that Email</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="message">message</string>
    <string name="enter_your_name">enter your name</string>
    <string name="the_email_is_already_in_use">The email address is already in use by another account.</string>
    <string name="send">send</string>
    <string name="title">title</string>
    <string name="data_title" translatable="false">title</string>
    <string name="data_type" translatable="false">data_type</string>
    <string name="data_message" translatable="false">message</string>
    <string name="empty">It\'s empty in here. \n Oops! Seems like there\'s nothing in this folder yet</string>
    <string name="next">next</string>
    <string name="next_video">Do you want to watch next video?</string>
    <string name="congratulations">Congratulations \n You Made it</string>
</resources>