<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar"/>

        <LinearLayout
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_account_name"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/tie_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/account_email"
                android:text="@string/change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/but_white"/>

            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/account_pass"
                android:text="@string/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/but_white"/>

        </LinearLayout>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>